--- a/app/src/main/res/layout/activity_post_fragment.xml
+++ b/app/src/main/res/layout/activity_post_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".PostFragment">
 
     <androidx.cardview.widget.CardView
@@ -36,8 +36,8 @@
         android:text="John Doe"
         android:textColor="#323232"
         android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@+id/profileImageCardView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/profileImageCardView"
         app:layout_constraintTop_toTopOf="@+id/profileImageCardView" />
 
     <TextView
@@ -94,42 +94,42 @@
         android:id="@+id/likeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:background="?android:attr/selectableItemBackground"
         android:contentDescription="Like Button"
         android:src="@drawable/ic_like"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/postTextArea"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/postTextArea" />
 
     <TextView
         android:id="@+id/likeCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         android:text="100"
         app:layout_constraintStart_toEndOf="@+id/likeButton"
-        app:layout_constraintTop_toTopOf="@+id/likeButton"
-        android:layout_marginStart="4dp" />
+        app:layout_constraintTop_toTopOf="@+id/likeButton" />
 
     <ImageButton
         android:id="@+id/commentButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:background="?android:attr/selectableItemBackground"
         android:contentDescription="Comment Button"
         android:src="@drawable/ic_comment"
         app:layout_constraintStart_toEndOf="@+id/likeCount"
-        app:layout_constraintTop_toTopOf="@+id/likeCount"
-        android:layout_marginStart="8dp" />
+        app:layout_constraintTop_toTopOf="@+id/likeCount" />
 
     <TextView
         android:id="@+id/commentCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         android:text="50"
         app:layout_constraintStart_toEndOf="@+id/commentButton"
-        app:layout_constraintTop_toTopOf="@+id/commentButton"
-        android:layout_marginStart="4dp" />
+        app:layout_constraintTop_toTopOf="@+id/commentButton" />
 
 
     <ImageButton
@@ -154,33 +154,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/shareButton" />
 
-    <LinearLayout
-        android:id="@+id/likeLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/postTextArea"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/commentLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/likeLayout" />
-
-    <LinearLayout
-        android:id="@+id/shareAndSaveLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/commentLayout"
-        app:layout_constraintStart_toEndOf="@+id/commentLayout"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
