--- a/app/src/main/res/layout/activity_portfolio_post_fragment.xml
+++ b/app/src/main/res/layout/activity_portfolio_post_fragment.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context=".PortfolioPostFragment">
 
     <androidx.cardview.widget.CardView
@@ -18,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/profileImage"
+            android:id="@+id/pfp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
@@ -27,7 +28,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/profileName"
+        android:id="@+id/fullName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -66,17 +67,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profileImageCardView"
-        app:layout_constraintVertical_bias="0.060000002"
-        >
+        app:layout_constraintVertical_bias="0.060000002">
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/portfolioImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:src="@tools:sample/avatars"
             android:adjustViewBounds="true"
-            />
+            android:scaleType="centerCrop"
+            android:src="@drawable/image_22" />
     </androidx.cardview.widget.CardView>
 
     <ImageButton
@@ -119,7 +118,7 @@
 
 
     <TextView
-        android:id="@+id/postTextArea"
+        android:id="@+id/portfolioDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
