--- a/app/src/main/res/layout/fragment_portfolio_post.xml
+++ b/app/src/main/res/layout/fragment_portfolio_post.xml
@@ -88,7 +88,8 @@
         android:contentDescription="Like Button"
         android:src="@drawable/ic_like"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/portfolioImageCardView" />
+        app:layout_constraintTop_toBottomOf="@+id/portfolioImageCardView"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/likeCount"
@@ -110,7 +111,7 @@
         android:text="Title"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/postTextArea"
+        app:layout_constraintBottom_toTopOf="@+id/portfolioDescription"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -129,15 +130,5 @@
         app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/portfolioTitle" />
-
-    <LinearLayout
-        android:id="@+id/likeLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/postTextArea" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
