--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".ui.post.PostFragment">
+    tools:context=".ui.post.PostFragment"
+    android:paddingBottom="16dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/profileImageCardView"
@@ -58,7 +60,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/postImageCardView"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_margin="16dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="2dp"
@@ -66,17 +68,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profileImageCardView"
-        app:layout_constraintVertical_bias="0.2">
+        app:layout_constraintVertical_bias="0.060000002">
 
         <ImageView
             android:id="@+id/postImage"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/sample_image" />
-
+            android:src="@drawable/image_22" />
     </androidx.cardview.widget.CardView>
-
     <TextView
         android:id="@+id/postTextArea"
         android:layout_width="0dp"
@@ -156,3 +157,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
