--- a/app/src/main/res/layout/fragment_profile_posts.xml
+++ b/app/src/main/res/layout/fragment_profile_posts.xml
@@ -2,15 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.profile.ProfilePostsFragment">
+    android:layout_height="wrap_content"
+    tools:context=".ui.profile.ProfilePostsFragment"
+    android:paddingBottom="16dp">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/postRecyclerView"
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="This is where posts go"
-        android:textColor="@color/blackBase"
-        android:textSize="16sp" />
-
+        android:layout_height="wrap_content"/>
 </FrameLayout>
