--- a/app/src/main/res/layout/fragment_setup_accounttype.xml
+++ b/app/src/main/res/layout/fragment_setup_accounttype.xml
@@ -67,12 +67,25 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/account_type"
-        android:layout_width="371dp"
-        android:layout_height="218dp"
+        android:layout_width="369dp"
+        android:layout_height="203dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/artist" />
+        app:layout_constraintTop_toBottomOf="@+id/artist"
+        app:layout_constraintVertical_bias="0.287" />
+
+    <Button
+        android:id="@+id/next_button"
+        style="@style/ContinueButton"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
+        android:text="@string/next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/account_type"
+        app:layout_constraintVertical_bias="0.232" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
