--- a/app/src/main/res/layout/fragment_setup_interests.xml
+++ b/app/src/main/res/layout/fragment_setup_interests.xml
@@ -36,8 +36,8 @@
 
     <GridView
         android:id="@+id/grid_interest"
-        android:layout_width="317dp"
-        android:layout_height="405dp"
+        android:layout_width="342dp"
+        android:layout_height="282dp"
         android:layout_marginTop="40dp"
         android:numColumns="3"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -49,5 +49,17 @@
 
     </GridView>
 
+    <Button
+        android:id="@+id/next_button"
+        style="@style/ContinueButton"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
+        android:text="@string/next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/grid_interest"
+        app:layout_constraintVertical_bias="0.225" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
