--- a/app/src/main/res/layout/fragment_setup_profilepicture.xml
+++ b/app/src/main/res/layout/fragment_setup_profilepicture.xml
@@ -28,8 +28,8 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/photo"
-            android:layout_width="257dp"
-            android:layout_height="258dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:src="@drawable/user_profile"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/photo"
-            app:layout_constraintVertical_bias="0.094" />
+            app:layout_constraintVertical_bias="0.179" />
 
         <Button
             android:id="@+id/addPhoto"
@@ -64,6 +64,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
             app:layout_constraintVertical_bias="0.188" />
+
+        <Button
+            android:id="@+id/next_button"
+            style="@style/ContinueButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/next"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addPhoto"
+            app:layout_constraintVertical_bias="0.86" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
