--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#3C3C45</color>
+    <color name="greyLight">#F7F7FA</color>
+    <color name="SearchGrey">#9EA0A9</color>
 </resources>
