search people almost done

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -59,6 +59,14 @@
         <item name="android:stateListAnimator">@null</item>
     </style>
 
+    <style name="SelectedButton" parent="Base.Theme.ArtCon_test" >
+        <item name="android:background">@drawable/selected_button</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:textColor">@color/whiteBase</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:stateListAnimator">@null</item>
+    </style>
+
     <style name="CancelButton" parent="Base.Theme.ArtCon_test" >
         <item name="android:background">@drawable/grey_border</item>
         <item name="backgroundTint">@null</item>
