--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -66,7 +67,6 @@
                 android:padding="8dp"
                 android:text="Category"
                 android:inputType="none"
-                app:simpleItems="@array/categories"
                 android:textColor="@color/blackBase"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -119,16 +119,20 @@
             android:id="@+id/recyclerView_Gallery_Images"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxHeight="30dp"
             android:scrollbarStyle="outsideInset"
-            android:scrollbars="vertical"
+           android:scrollbars="vertical"
             android:layout_marginTop="5dp"
+           android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
 
-            />
+        />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginTop="9dp"
             android:layout_marginStart="36dp"
             android:layout_marginEnd="36dp"
             android:gravity="center">
@@ -281,4 +285,4 @@
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
