--- a/app/src/main/res/layout/single_selected_video.xml
+++ b/app/src/main/res/layout/single_selected_video.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:padding="2dp"
-    >
-    <ImageView
-        android:id="@+id/image"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="2dp">
+
+    <VideoView
+        android:id="@+id/video"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
