--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="design_bottom_navigation_height" >72dp</dimen>
+    <dimen name="design_bottom_navigation_height">72dp</dimen>
     <dimen name="bottom_nav_default_icon_size">24dp</dimen>
     <dimen name="bottom_nav_activated_icon_size">72dp</dimen>
     <dimen name="bottom_nav_activated_icon_size_large">150dp</dimen>
@@ -12,4 +12,5 @@
     <dimen name="button_margin_end">40dp</dimen>
     <dimen name="button_margin_bottom">232dp</dimen>
     <dimen name="button_margin_top">36dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
