--- a/app/src/main/res/layout/fragment_add_details.xml
+++ b/app/src/main/res/layout/fragment_add_details.xml
@@ -1,6 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<!-- fragment_add_details.xml -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Your buttons for New post and New portfolio post -->
+    <Button
+        android:id="@+id/btnNewPost"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="New post" />
+
+    <Button
+        android:id="@+id/btnNewPortfolioPost"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="New portfolio post" />
+</LinearLayout>
